# ljmd

./: .gitignore  CMakeLists.txt  GTest.cmake  README.md
.github/workflows/: main.yml
examples/: Makefile  argon_108.xyz
include/: utils.h
reports/: omp_report.md
src/: force_compute.c  kinetic.c  ljmd.c  output.c  utils.c  verlet.c
test/: simple_test.inp  simple_test.rest  test_ekin.cpp  test_force.cpp  test_verlet.cpp
